--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">EverCare Home Health</div>
+    <img src="images/logo.png" class="logo" alt="">
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
